# AmberRenderer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: amber.h  camera.h  camera.hpp  film.h  geometry.h  integrator.h  main.cpp  primitive.h  scene.h  shape.h  transform.h
src/main/: main.cpp
